<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/dBg" >

        <TextView
            android:id="@+id/title"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" tools:ignore="RelativeOverlap"/>
        
        <ImageButton
            android:id="@+id/refersh"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_bgcolor_selector"
            android:src="@drawable/ic_refresh" tools:ignore="ContentDescription,RtlHardcoded"/>

        <net.sarangnamu.common.fonts.RobotoLightTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/myid"
            android:textColor="#7fffffff"
            android:textSize="8sp"
            android:visibility="gone" tools:ignore="RtlHardcoded"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/editLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/emsLayoutMinHeight"
        android:background="#d9d9d9"
        android:paddingLeft="10dp" tools:ignore="RtlHardcoded,RtlSymmetry">

        <EditText
            android:id="@+id/emsNum"
            android:layout_width="match_parent"
            android:layout_height="@dimen/emsLayoutMinHeight"
            android:layout_alignParentTop="true"
            android:background="@null"
            android:hint="@string/emsNumber" android:maxLines="1"/>
        
<!--             android:inputType="text|textNoSuggestions" -->
<!--             android:digits="abcdefghijklmnopqrstuvwxyz1234567890" -->
        
        
        <EditText
            android:id="@+id/anotherName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/emsLayoutMinHeight"
            android:hint="@string/anotherName"
            android:background="@null"
            android:layout_alignParentBottom="true"
            android:visibility="gone" android:maxLines="1"/>
        
        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_selector"
            android:text="@string/add" tools:ignore="RelativeOverlap,RtlHardcoded"/>
        
        
    </RelativeLayout>

    <net.sarangnamu.common.ui.list.AniBtnListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:drawSelectorOnTop="false"
        android:listSelector="@drawable/list_bg_selector" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center|center_vertical"
        android:text="@string/emptyList" />

</LinearLayout>